<resources>
    <string name="app_name">Restic</string>
    <string name="text_folders">Folders</string>
    <string name="text_folder">Folder</string>
    <string name="text_repos">Repositories</string>
    <string name="text_repository">Repository</string>
    <string name="text_settings">Settings</string>
    <string name="text_about">About</string>
    <string name="text_snapshots">Snapshots</string>
    <string name="text_snapshot">Snapshot</string>
    <string name="text_files">Files</string>
    <string name="text_schedule">Schedule</string>
    <string name="text_retain">Retain</string>
    <string name="text_saving">Saving…</string>
    <string name="text_backup_service">Backup Service</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="button_done">Done</string>
    <string name="button_browse">Browse</string>
    <string name="button_backup">Backup</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_refresh">Refresh</string>
    <string name="alert_delete_repo_title">Delete Repository Configuration</string>
    <string name="alert_delete_repo_message">Do you want to delete this Repository configuration?</string>
    <string name="alert_init_repo_title">Initialize Repository</string>
    <string name="alert_init_repo_message">No repository found. Do you want to initialize a new Repository at this location?</string>
    <string name="alert_save_repo_title">Failed to initialize Repository</string>
    <string name="alert_save_repo_message">Failed to initialize Repository!</string>
    <string name="alert_save_repo_question">Do you want to save anyway?</string>
    <string name="alert_delete_folder_title">Delete Folder Configuration</string>
    <string name="alert_delete_folder_message">Do you want to delete this Folder configuration?</string>
    <string name="alert_backup_cancel_title">Cancel Backup</string>
    <string name="alert_backup_cancel_message">Do you want to cancel the Backup?</string>
    <string name="alert_delete_snapshot_title">Delete Snapshot</string>
    <string name="alert_delete_snapshot_message">Do you want to delete this Snapshot?</string>
    <string name="alert_download_file_title">Download File</string>
    <string name="alert_download_file_message">
        Do you want to download this file: "%s"
        here: "%s" ?
    </string>
    <string name="alert_download_file_no_dest_dir">Before proceeding, ensure that you have chosen a valid download folder in the settings.</string>
    <string name="notification_channel_backup">Restic Backup</string>
    <string name="notification_backup_title">Restic Backup</string>
    <string name="notification_backup_progress_message">Backup in Progress…</string>
    <string name="notification_backup_done_message">Backup Finished!</string>
    <string name="notification_backup_failed_message">Backup Failed!</string>
    <string name="repo_edit_name_title">Repository Name</string>
    <string name="repo_edit_name_hint">Restic Repo Name</string>
    <string name="repo_edit_name_error_mandatory">Repo Name needed</string>
    <string name="repo_edit_password_title">Repository Password</string>
    <string name="repo_edit_password_hint">correct horse battery staple</string>
    <string name="repo_edit_password_error_mandatory">Repo Password needed</string>
    <string name="repo_edit_type_title">Repository Type</string>
    <string name="repo_edit_b2_account_key_title">B2_ACCOUNT_KEY</string>
    <string name="repo_edit_b2_account_key_error_mandatory">B2 Account Key needed</string>
    <string name="repo_edit_b2_account_id_title">B2_ACCOUNT_ID</string>
    <string name="repo_edit_b2_account_id_error_mandatory">B2 Account ID needed</string>
    <string name="repo_edit_b2_uri_title">B2 Endpoint URL</string>
    <string name="repo_edit_b2_uri_error_mandatory">B2 Endpoint URL needed</string>
    <string name="repo_edit_b2_uri_hint">b2-bucket-name/restic-repository-name</string>
    <string name="repo_edit_rest_uri_title">Rest Endpoint URI</string>
    <string name="repo_edit_rest_uri_error_mandatory">Rest Endpoint URL needed</string>
    <string name="repo_edit_rest_uri_hint">http(s)://basicUser:basicPassword@restServerHostname:restServerPort/resticRepoName</string>
    <string name="repo_edit_s3_uri_title">S3 Endpoint URL</string>
    <string name="repo_edit_s3_uri_error_mandatory">S3 Endpoint URL needed</string>
    <string name="repo_edit_s3_uri_hint">https://s3.amazonaws.com/restic-repository-name</string>
    <string name="repo_edit_s3_access_key_id_title">ACCESS_KEY_ID</string>
    <string name="repo_edit_s3_access_key_id_error_mandatory">S3 Access Key ID needed</string>
    <string name="repo_edit_s3_secret_access_key_title">SECRET_ACCESS_KEY</string>
    <string name="repo_edit_s3_secret_access_key_error_mandatory">S3 Secret Access Key needed</string>
    <string name="repo_edit_s3_default_region_title">AWS_DEFAULT_REGION</string>
</resources>
